--- a/Actividades/Receta de cocina/contact.html
+++ b/Actividades/Receta de cocina/contact.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <script src="https://kit.fontawesome.com/e83daef3ff.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
     <header style="background-color: orange;">
         <nav>
-            <a style="background-color: chocolate;" href="./home.html">Home</a>
-            <a style="background-color: chocolate;" href="#">Acerca de nosotros</a>
-            <a style="background-color: chocolate;" href="./contact.html">Contacto</a>
-            <a style="background-color: chocolate;" href="#">Sucursales</a>
+            <a href="./home.html">Home</a>
+            <a href="#">Acerca de</a>
+            <a href="./contact.html">Contacto</a>
+            <a href="#">Sucursales</a>
         </nav>
         <h1 style="text-align: center;">LA COCINA DE JUAN</h1>
 
