--- a/Actividades/Receta de cocina/home.html
+++ b/Actividades/Receta de cocina/home.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <script src="https://kit.fontawesome.com/e83daef3ff.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
-    <header style="background-color: orange;">
+    <header>
+        <br>
         <nav>
-            <a style="background-color: chocolate;" href="index.html">Home</a>
-            <a style="background-color: chocolate;" href="#">Acerca de nosotros</a>
-            <a style="background-color: chocolate;" href="#">Contacto</a>
-            <a style="background-color: chocolate;" href="#">Sucursales</a>
+
+            <a href="index.html">Home</a>
+            <a href="#">Acerca de</a>
+            <a href="./contact.html">Contacto</a>
+            <a href="#">Sucursales</a>
         </nav>
-        <h1 style="text-align: center;">LA COCINA DE JUAN</h1>
+        <h1>LA COCINA DE JUAN</h1>
 
     </header>
     <h2>Tarta de manzanas</h2>
@@ -24,7 +27,7 @@
     <br>
     <a href="receta.html"> RECETA </a>
 
-    <footer style="background-color: orange; text-align: center;">
+    <footer>
         <br>
         <nav>
             <a href="#"><i class="fa-brands fa-twitter"> </i></a>
@@ -34,7 +37,7 @@
         </nav>
         <br>
         <p>Derechos reservados @2024</p>
-        <br>
+        
     </footer>
 </body>
 
