--- a/Actividades/Receta de cocina/receta.html
+++ b/Actividades/Receta de cocina/receta.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina de ejemplo</title>
     <script src="https://kit.fontawesome.com/e83daef3ff.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="CSS/style.css">
 
 </head>
 
@@ -14,12 +15,12 @@
 
     <header style="background-color: orange;">
         <nav>
-            <a style="background-color: chocolate;" href="index.html">Home</a>
-            <a style="background-color: chocolate;" href="#">Acerca de nosotros</a>
-            <a style="background-color: chocolate;" href="#">Contacto</a>
-            <a style="background-color: chocolate;" href="#">Sucursales</a>
+            <a href="index.html">Home</a>
+            <a href="#">Acerca de</a>
+            <a href="./contact.html">Contacto</a>
+            <a href="#">Sucursales</a>
         </nav>
-        <h1 style="text-align: center;">RECETAS DE COCINA</h1>
+        <h1>RECETAS DE COCINA</h1>
 
     </header>
 
@@ -84,7 +85,7 @@
     </lo>
 
     <br>
-    <footer style="background-color: orange; text-align: center;">
+    <footer>
         <br>
         <nav>
             <a href="#"><i class="fa-brands fa-twitter"> </i></a>
